[gd_scene load_steps=4 format=3 uid="uid://c8xaptr321o6k"]

[ext_resource type="Script" path="res://spell_caster/spell_caster.gd" id="1_4ff2q"]
[ext_resource type="PackedScene" uid="uid://fsow1ucof4ir" path="res://spell_orb/spell_orb.tscn" id="2_khy0s"]

[sub_resource type="Curve3D" id="Curve3D_85ecw"]
_data = {
"points": PackedVector3Array(0, 0.00418621, 0.43442, 0, 0, -0.4, 0, 0, 0, 0, -0.25, 0.24, 0, 0.25, -0.24, 0, 0.4, -0.9, 0, 0.001, 0.4, 0, -0.000961065, -0.545312, 0, 0.8, -1.8),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="SpellCaster" type="Node3D"]
script = ExtResource("1_4ff2q")

[node name="Path" type="Path3D" parent="."]
curve = SubResource("Curve3D_85ecw")

[node name="Follower" type="PathFollow3D" parent="Path"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.999995, 0, 0, 0, 0.999995, 0, 0, 0)

[node name="SpellOrb" parent="Path/Follower" instance=ExtResource("2_khy0s")]
unique_name_in_owner = true

[node name="TimerOn" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.8
one_shot = true

[node name="TimerOff" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="TimerOn" to="." method="_on_timer_on_timeout"]
[connection signal="timeout" from="TimerOff" to="." method="_on_timer_off_timeout"]
